tp6/kubernetes/m-sfs.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:
  name: mongo

spec:
  selector:
    matchLabels:
      app: mongo

  serviceName: m-service

  replicas: 1

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          value: strapi
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: strapi

        image: mongo
        imagePullPolicy: IfNotPresent
        name: mongo
        ports:
        - containerPort: 27017
          name: mongo
          protocol: TCP
        volumeMounts:
        - mountPath: /data/db
          name: mongodb
          
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: mongodb
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      volumeMode: Filesystem

---

apiVersion: v1

kind: Service

metadata:
  labels:
    app: mongo
    
  name: m-service


spec:
  type: ClusterIP

  clusterIP: None

  ports:
  - name: mongo
    port: 27017
    protocol: TCP

  selector:
    app: mongo
