tp6/kubernetes/s-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: s-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  tls:
  - hosts:
    - strapi.strapi.com
    secretName: strapi-cert
  rules:
  - host: strapi.strapi.com
    http:
      paths:
      - backend:
          serviceName: s-service
          servicePort: 1337
